@@ -1,3 +1,9 @@
+2002-10-27  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/stack.c (restack_windows):
+	(__get_stacking_sibling):
+	fixed another stacking problem
+
 2002-10-26  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/add_window.c (AddWindow):
